Fixed layout issues with modern admin design

--- a/postgres_metrics/static/postgres_metrics/css/base.css
+++ b/postgres_metrics/static/postgres_metrics/css/base.css
@@ -3,31 +3,39 @@
  * at 244cc401559e924355cf943b6b8e66ccf2f6da3a
  */
 #postgres-metrics {
-    float: left;
-    width: 100%;
+  float: left;
+  width: 100%;
 }
 
 .colSM #postgres-metrics {
-    float: right;
+  float: right;
 }
 
 #postgres-metrics .viewlink {
-    padding-left: 16px;
-    background: url(../../admin/img/search.svg) 0 1px no-repeat;
+  padding-left: 16px;
+  background: url(../../admin/img/search.svg) 0 1px no-repeat;
 }
 
-tr.pgm-critical, td.pgm-critical {
-    background-color: #ffefef;
+.app-postgres_metrics.change-list .filtered {
+  min-height: 0;
 }
 
-tr.pgm-warning, td.pgm-warning {
-    background-color: #ffffcc;
+tr.pgm-critical,
+td.pgm-critical {
+  background-color: #ffefef;
 }
 
-tr.pgm-ok, td.pgm-ok {
-    background-color: #ddffdd;
+tr.pgm-warning,
+td.pgm-warning {
+  background-color: #ffffcc;
 }
 
-tr.pgm-info, td.pgm-info {
-    background-color: #9ADEFF;
+tr.pgm-ok,
+td.pgm-ok {
+  background-color: #ddffdd;
+}
+
+tr.pgm-info,
+td.pgm-info {
+  background-color: #9adeff;
 }
